creusot/tests/should_fail/prusti/deref/mut.stderr
error[creusot]: `&'old u32` cannot be moved from `'old` to `'curr` since it doesn't live long enough
                `'old` doesn't outlive `'curr`
  --> mut.rs:14:22
   |
14 | #[ensures(result == *old(x.0.mk_ref()))]
   |                      ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

